# opencv_contrib

modules/aruco/: CMakeLists.txt
modules/aruco/include/opencv2/: aruco.hpp
modules/aruco/include/opencv2/aruco/: charuco.hpp  dictionary.hpp
modules/aruco/samples/: calibrate_camera.cpp  calibrate_camera_charuco.cpp  create_board.cpp  create_board_charuco.cpp  create_diamond.cpp  create_marker.cpp  detect_board.cpp  detect_board_charuco.cpp  detect_diamonds.cpp  detect_markers.cpp
modules/aruco/src/: aruco.cpp  charuco.cpp  dictionary.cpp
